--- a/dessert/index.html
+++ b/dessert/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_3347615_yx1zg6553om.css"/>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//at.alicdn.com/t/font_3347615_92f29n1cyai.css"
+    />
     <title>Vite App</title>
   </head>
   <body>
